make tsc convert tsx to jsx and remove declaraction

--- a/example/package.json
+++ b/example/package.json
@@ -2,11 +2,9 @@
   "name": "threejs-globe-demo",
   "version": "0.1.0",
   "private": true,
-  "main": "dist/Globe.js",
   "dependencies": {
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "threejs-globe": "file:../"
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "react-scripts": "3.4.1"
