--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-  "name": "threejs-globe",
+  "name": "threejs-globe-demo",
   "version": "0.1.0",
   "private": true,
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -14,10 +12,11 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/three": "0.93.31",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "react-scripts": "3.4.1"
   },
   "scripts": {
-    "build": "tsc"
+    "start": "react-scripts start"
   },
   "eslintConfig": {
     "extends": "react-app"
